--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+
+{% include 'head.html' %}
+
 <body>
-hi jango
+
+{% include 'header.html' %}
+
+{% block content %}
+{% endblock%}
+
+{% include 'footer.html' %}
 </body>
 </html>
