--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,14 @@
-    <div style="height: 10rem; background-color: #38df81; border-radius:1rem; margin: 2rem;">
+    <div style="text-align: center; margin-top: 1rem;">
+
+        <div style="font-size:0.6rem">
+            <span>공지사항</span> |
+            <span>회사소개</span> |
+            <span>문의사항</span>
+        </div>
+
+        <div>
+            <h6 style="margin-top: 0.6rem; font-family: 'Orelega One', cursive;">Pragmatism</h6>
+        </div>
+
 
     </div>
