--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,15 @@
-    <div style="height: 10rem; background-color: #38df81; border-radius:1rem; margin: 2rem;">
+
+    <div style="text-align: center; margin: 1rem 0;">
+
+        <div>
+            <h1 style="font-family: 'Orelega One', cursive;">Pragmatism</h1>
+        </div>
+
+        <div>
+            <span>nav1</span>
+            <span>nav2</span>
+            <span>nav2</span>
+            <span>nav</span>
+        </div>
 
     </div>
