--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,8 @@
 
-    <div style="text-align: center; margin: 1rem 0;">
+    <div class="header">
 
         <div>
-            <h1 style="font-family: 'Orelega One', cursive;">Pragmatism</h1>
+            <h1 class="log">Pragmatism</h1>
         </div>
 
         <div>
