--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,13 +1,13 @@
-    <div style="text-align: center; margin-top: 1rem;">
+    <div class="footer">
 
-        <div style="font-size:0.6rem">
+        <div class="footer_button">
             <span>공지사항</span> |
             <span>회사소개</span> |
             <span>문의사항</span>
         </div>
 
         <div>
-            <h6 style="margin-top: 0.6rem; font-family: 'Orelega One', cursive;">Pragmatism</h6>
+            <h6 class="log" style="margin-top: 0.6rem;">Pragmatism</h6>
         </div>
 
 
