--- a/templates/head.html
+++ b/templates/head.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <head>
     <meta charset="UTF-8">
     <title>Pragmatism</title>
@@ -8,4 +10,6 @@
 <!-- GOOLEFONT link  -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Orelega+One&display=swap" rel="stylesheet">
+<!--  CSS link  -->
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
 </head>
