--- a/accountapp/templates/accountapp/create.html
+++ b/accountapp/templates/accountapp/create.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div style="text-align: center;">
+<div class="cen">
     <form action="{% url 'accountapp:create' %}" method="post">
         {% csrf_token %}
         {{form}}
